added ingredients and instructions

--- a/recipes/cream-of-chicken.html
+++ b/recipes/cream-of-chicken.html
@@ -14,13 +14,24 @@
     />
     <h3><strong>Ingredients</strong></h3>
     <ul>
-      <li></li>
+      <li>3 tablespoons vegan butter</li>
+      <li>1 tablespoon all-purpose flour</li>
+      <li>1/2 cup mild-flavored plant milk</li>
+      <li>1/2 cup vegan chicken style broth</li>
+      <li>sea salt to taste</li>
+      <li>ground black pepper to taste</li>
     </ul>
     <h3><strong>Instructions</strong></h3>
     <ol>
-      <li></li>
+      <li>Set a small saucepan over medium heat, and add the butter</li>
+      <li>When butter is melted, add flour; whisk until smooth</li>
+      <li>Add milk, broth, salt, and pepper</li>
+      <li>
+        Bring to a boil and continue whisking for 2 minutes, until thickened.
+      </li>
+      <li>Use anywhere a recipe calls for acan of cream of chicken soup!</li>
     </ol>
 
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home<git/a>
   </body>
 </html>
