--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -7,5 +7,35 @@
   </head>
   <body>
     <h1><strong>NoMeatloaf</strong></h1>
+    <h3>Instructions</h3>
+    <h4>Filling</h4>
+    <ul>
+      <li>2 lbs Beyond Ground Beef</li>
+      <li>1/2 onion, minced</li>
+      <li>1 cup unsweetened non dairy milk</li>
+      <li>1 cup plain instant oats</li>
+      <li>1/4 cup Justt Egg</li>
+      <li>salt and pepper to taste</li>
+    </ul>
+    <h4>Topping</h4>
+    <ul>
+      <li>2/3 cup ketchup</li>
+      <li>2 tablespoons brown sugar</li>
+      <li>1 table yellow mustard</li>
+    </ul>
+    <h3>Instructions</h3>
+    <ol>
+      <li>Preheat the oven to 350 degrees</li>
+      <li>
+        Combine all Ingredients for the filling into a large mixing bowl and
+        combine thouroughly.
+      </li>
+      <li>Grease a 9x5 loaf pan and evenly spread filling in the bottom.</li>
+      <li>
+        Combine all Ingredients for the topping into a bowl and mix until
+        smooth.
+      </li>
+      <li>Spread topping evenly over the filling.</li>
+    </ol>
   </body>
 </html>
